--- a/css/main.css
+++ b/css/main.css
@@ -213,6 +213,12 @@ img{
 
 }
 @media screen and (max-width:991px){
+    .Home-img{
+        margin-bottom: 20px;
+    }
+    .about-section .box{
+       display: none;
+    }
     .footer-main .footer-top  {
         flex-direction: column;
     }
@@ -240,16 +246,16 @@ img{
 .sidbar{
     position: fixed;
     top: 0;
-    left: 0;
+    left: -100%;
     width: 100%;
     height: 1000%;
     background: #000000;
     z-index: 999;
     padding: 20px 30px;
-    display: none;
+    transition: all 300ms ease-in-out;
 }
 .sidbar.active{
-    display: block !important;
+    left:0;
     transition: all 300ms ease-in-out;
 }
 .sidbar .logo img{
@@ -287,5 +293,14 @@ img{
 @media screen and (max-width:575px) {
     .header{
         padding: 0 15px;
+    }
+}
+@media screen and (max-width:454px){
+    .Creations-section .Creations-title {
+        display: flex;
+        flex-direction: column;
+    }
+    .Creations-section .Creations-title  h2{
+        margin-bottom: 15px;
     }
 }
